--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Title: R Interface for H2O Sparkling Water
 Version: 0.1.0
 Authors@R: c(
   person("JJ", "Allaire", role = c("aut"), email = "jj@rstudio.com"),
-  person("Erin", "LeDell", role = c("aut", "cre"), email = "erin@h2o.ai"),
+  person("Erin", "LeDell", role = c("aut"), email = "erin@h2o.ai"),
   person("Michal", "Malohlava", role = c("aut"), email = "michal@h2o.ai"),
-  person("Navdeep", "Gill", role = c("aut"), email = "navdeep@h2o.ai"),
+  person("Navdeep", "Gill", role = c("aut", "cre"), email = "navdeep@h2o.ai"),
   person("Jakub", "Hava", role = c("aut"), email = "jakub@h2o.ai"),
   person("RStudio", role = c("cph")),
   person("H2O.ai", role = c("cph")))
@@ -16,7 +16,7 @@ Imports:
 Suggests: dplyr, testthat
 Description: An extension package for sparklyr that provides an R interface to
     H2O Sparkling Water machine learning library.
-License: file LICENSE
+License: Apache License 2.0 | file LICENSE
 Encoding: UTF-8
 LazyData: true
 NeedsCompilation: no
