--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,8 @@ Imports:
     sparklyr (>= 0.3),
     h2o (>= 3.8.3.3)
 Suggests: dplyr, testthat
-Description: An extension package for sparklyr that provides an R interface to
-    H2O Sparkling Water machine learning library.
+Description: An extension package for ‘sparklyr’ that provides an R interface to
+    H2O Sparkling Water machine learning library (see <https://github.com/h2oai/sparkling-water> for more information).
 License: Apache License 2.0 | file LICENSE
 Encoding: UTF-8
 LazyData: true
