--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(as_h2o_frame)
 export(as_spark_dataframe)
 export(h2o_context)
 export(h2o_flow)
+export(h2o_release_table)
 export(install_h2o)
 importFrom(h2o,h2o.getFrame)
 importFrom(h2o,h2o.getId)
