--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,3 +21,4 @@ importFrom(sparklyr,spark_dataframe)
 importFrom(sparklyr,spark_dependency)
 importFrom(utils,browseURL)
 importFrom(utils,capture.output)
+importFrom(utils,read.table)
