Update DESCRIPTION and NEWS in preparation for release 0.2.0 (#27)
* Update DESCRIPTION and NEWS for release 0.2.0

* Minor update to NAMESPACE

* Minor update to NEWS.md

* Add note about Windows OS wiki

* Modify example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,4 +20,5 @@ importFrom(sparklyr,spark_dataframe)
 importFrom(sparklyr,spark_dependency)
 importFrom(utils,browseURL)
 importFrom(utils,capture.output)
+importFrom(utils,packageVersion)
 importFrom(utils,read.table)
