--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-.Rproj
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
+*.Rproj
+*.Rproj.user
+*.Rhistory
+*.RData
+*.Ruserdata
 derby.log
 h2ologs
 log4j.*
