--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,3 +24,5 @@ SystemRequirements: Java (>6)
 URL: https://github.com/h2oai/rsparkling
 BugReports: http://jira.h2o.ai
 RoxygenNote: 5.0.1
+Depends:
+    R (>= 2.10)
